# Rahbar

./: .gitignore  README.md
backend/: Dockerfile  livekit.toml  pyproject.toml  requirements.txt
backend/src/: agent.py
backend/src/agent_utils/: agent_blueprint_loader.py  agent_tools.py  background_audio.py  default_agent.py  first_message_config.py  function_tools.py  model_providers.py  provider_instances.py  system_messages.py
frontend/: app-config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx  opengraph-image.tsx
frontend/app/components/livekit/: page.tsx
frontend/components/: app.tsx  dark-mode-toggle.tsx  provider.tsx  session-view.tsx  welcome.tsx
frontend/components/livekit/: device-select.tsx  media-tiles.tsx  track-toggle.tsx
frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx
frontend/components/livekit/agent-control-bar/hooks/: use-agent-control-bar.ts
frontend/components/ui/: button.tsx
